--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "request": "~2.34.0"
+    "request": "~2.34.0",
+    "qs": "~0.6.6"
   }
 }
-
