--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.8",
     "jade": "*",
     "request": "~2.34.0",
-    "qs": "~0.6.6"
+    "qs": "~0.6.6",
+    "swig": "~1.3.2"
   }
 }
